# alpha-whale

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: napkin.md
.claude/specs/: WP-Bedrock-migration.md  alpha-whale-simplification-design.md  alpha-whale-simplification-plan.md
.github/workflows/: ci.yml  deploy.yml
agent/: __init__.py  chain.py  config.py  evaluate.py  graph.py  models.py  state.py  tools.py
api/: config.py  dependencies.py  main.py  models.py  routes.py
api/tests/: conftest.py  test_routes.py
core/: __init__.py  async_utils.py  extraction.py  observability.py  redis_client.py
core/config/: __init__.py  settings.py
core/exceptions/: __init__.py  base.py
core/logging/: __init__.py  logger.py
docs/: architecture.md  deploy.md  provisioning.md
ingestion/: __init__.py  __main__.py  bronze.py  config.py  massive.py  pipeline.py  schemas.py  stochastic.py  supabase_client.py
ingestion/rag/: __init__.py  chunking.py  config.py  edgar.py  firecrawl_source.py  indexing.py  pipeline.py  retrieval.py
migrations/: 001_create_market_tables.sql
tests/: test_agent_config.py  test_api_routes.py  test_async_utils.py  test_config.py  test_evaluate.py  test_exceptions.py  test_extraction.py  test_graph.py  test_ingestion.py  test_logging.py  test_massive.py  test_models.py  test_observability.py  test_pipeline.py  test_rag_chunking.py  test_rag_config.py  test_rag_edgar.py  test_rag_firecrawl.py  test_rag_indexing.py  test_rag_pipeline.py  test_rag_retrieval.py  test_rag_tool.py  test_redis_client.py  test_stochastic.py  test_tools.py  testing_utils.py
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: chat-panel.tsx  comparison-card.tsx  indicators-card.tsx  pill-nav.tsx  stock-data-card.tsx  tradingview-chart.tsx
web/components/ui/: table.tsx
web/lib/: sse-client.ts
